internal/octogo/testdata/decl_import2.ogo
import "p"

// ERROR "declare.*both"
const p = 42
